--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
             <artifactId>grpc-stub</artifactId>
             <version>1.34.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
